Addition to #9988, avoid scrollbars when not needed

--- a/css/annotations/popup.scss
+++ b/css/annotations/popup.scss
@@ -34,7 +34,7 @@ $button-hover-color: #e6ebf5;
   top: 5%;
   left: 15%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 75%;
   min-width: 300px;
   max-width: 600px;
